# alpaka2SGEMM

./: measure.py
example/: CMakeLists.txt
example/SGEMM/: CMakeLists.txt
example/SGEMM/src/: 00_sgemm_naive_cuda_like.cpp  01_gmem_naive.cpp  01_gmem_non_coalesced.cpp  02_gmem_coalesced.cpp  03_smem.cpp  10_bench.cpp  naive_cpu.h
